[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"
authors = ["xorillaz.persona@gmail.com"]


# The profile used for `cargo build`.
[profile.dev]
panic = "abort" # Disable stack unwinding on panic.

# The profile used for `cargo build --release`.
[profile.release]
panic = "abort" # Disable stack unwinding on panic.

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2" # To get synchronized interior mutability.

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]